tests/baselines/reference/interfaceWithMultipleBaseTypes2.errors.txt
tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts(17,11): error TS2430: Interface 'Derived2' incorrectly extends interface 'Base'.
  The types of 'x.a' are incompatible between these types.
    Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/interfaces/interfaceDeclarations/interfaceWithMultipleBaseTypes2.ts (1 errors) ====
    interface Base {
        x: {
            a?: string; b: string;
        }
    }
    
    interface Base2 {
        x: {
            b: string; c?: number;
        }
    }
    
    interface Derived extends Base, Base2 {
        x: { b: string }
    }
    
    interface Derived2 extends Base, Base2 { // error
              ~~~~~~~~
!!! error TS2430: Interface 'Derived2' incorrectly extends interface 'Base'.
!!! error TS2430:   The types of 'x.a' are incompatible between these types.
!!! error TS2430:     Type 'number' is not assignable to type 'string'.
        x: { a: number; b: string }
    }
    
    interface Derived3 extends Base, Base2 {
        x: { a: string; b: string }
    }
    
    